<?xml version="1.0"?>
<package format="3">
  <name>dynamic_reconfigure_ros2</name>
  <version>1.0.0</version>
  <description>Searches for available ROS parameters and adjusts them in real-time.</description>
  <maintainer email="petrvancjr@gmail.com">Petr Vanc</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

